<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactDetails">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_23sdp"
        android:contentDescription="@string/person_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_avatar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/callingBtn"
        app:layout_constraintTop_toBottomOf="@+id/avatar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@mipmap/ic_launcher_person_foreground" />

            <TextView
                android:id="@+id/nameText"
                android:layout_width="0dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:hint="@string/name"
                android:paddingLeft="@dimen/_5sdp"
                android:textColorHint="#78909C"
                android:textSize="@dimen/_17ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@mipmap/ic_launcher_mobile_foreground" />

            <TextView
                android:id="@+id/mobileText"
                android:layout_width="0dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:hint="@string/mobile"
                android:paddingLeft="@dimen/_5sdp"
                android:textColorHint="#78909C"
                android:textSize="@dimen/_17ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@mipmap/ic_launcher_mail_foreground" />

            <TextView
                android:id="@+id/emailText"
                android:layout_width="0dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:paddingLeft="@dimen/_5sdp"
                android:textColorHint="#78909C"
                android:textSize="@dimen/_17ssp" />
        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/callingBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:clickable="true"
        android:src="@drawable/ic_calling"
        android:foregroundGravity="center_horizontal"
        android:contentDescription="@string/calling"
        app:layout_constraintBottom_toTopOf="@id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/editUser"
            android:layout_width="0dp"
            android:layout_height="@dimen/_60sdp"
            android:layout_weight="1"
            android:contentDescription="@string/editUser"
            app:srcCompat="@mipmap/ic_launcher_edit_user_foreground" />

        <ImageButton
            android:id="@+id/deleteUser"
            android:layout_width="0dp"
            android:layout_height="@dimen/_60sdp"
            android:layout_weight="1"
            android:contentDescription="@string/deleteUser"
            app:srcCompat="@mipmap/ic_launcher_delete_user_foreground" />
    </LinearLayout>

    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:orientation="vertical"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/avatar"></LinearLayout>-->


</android.support.constraint.ConstraintLayout>